# TensorRTModelDeployment

./: CMakeLists.txt  CMakeLists2.txt  README.md  main.cpp  main_new.cpp  main_single.cpp  main_test.cpp  main_thread.cpp
algorithm _actory/: AlgorithmFactory.cpp  AlgorithmFactory.h
algorithm _factory/: AlgorithmFactory.cpp  AlgorithmFactory.h  struct_data_type.h
algorithm_factory/: Infer.cpp  Infer.h  InferImpl.cpp  InferImpl.h  InferImpl_beifen.h  factory.cpp  factory.h  selfDataType.hpp  struct_data_type.h
algorithm_product/: CMakeLists.txt  YoloDetect.cpp  YoloDetect.h  YoloDetect2.cpp  YoloDetect2.h  YoloFace.cpp  YoloFace.h  product.h
base_infer/: infer.h  runtime_infer.cpp  selfDataType.hpp  single_infer.cpp  thread_infer.cpp  trt_infer.cpp
builder/: trt_builder.cpp  trt_builder.h
codes_beifen/: Infer.h  InferImpl.cpp  InferImpl.h  InferImpl_beifen.h  YoloDetect_old.cpp  YoloDetect_old.h  YoloFace.cpp  face_interface.cpp  face_interface.h  factory.cpp  factory.h  interface2.h  interface_single_beifen.cpp  main.cpp  main_rbuild.cpp  struct_data_type.h  thread_infer_raw.cpp  trt_taskflow_infer.cpp
interface/: beifen.cpp  face_interface.cpp  face_interface.h  face_interface_new.cpp  face_interface_new.h  face_interface_new_raw.cpp  face_interface_thread.cpp  face_interface_thread.h  face_interface_thread_beifen.cpp  face_interface_thread_pybind11.cpp  face_interface_thread_pybind11.h  interface.cpp  interface.h  interface2.cpp  interface_py11.cpp  interface_py11.h  interface_single.cpp  interface_single.h  interface_single_beifen.cpp  interface_thread.cpp  interface_thread.h  single_interface.cpp  single_interface.h  thread_interface.cpp  thread_interface.h
product/: CMakeLists.txt  YoloDetect.cpp  YoloDetect.h  product.h
pybind11/: .pre-commit-config.yaml  CMakeLists.txt
pybind11/tests/: CMakeLists.txt
test/: CMakeLists.txt  main5.cpp  py_11.py  single_py11.py  thread_py11.py
utils/: box_utils.cpp  box_utils.h  file_funcs.cpp  file_funcs.h  general.cpp  general.h  loguru.cpp  loguru.hpp  thread_pool.hpp
